spacing issues fixed

--- a/docroot/themes/cypress_store/less/style.less
+++ b/docroot/themes/cypress_store/less/style.less
@@ -32,7 +32,7 @@ body{
 					}
 					a{
 					    padding: 0 2px !important;
-					    margin-right: 20px !important;
+					    margin-right: 13px !important;
 					    margin-top: -8px;
 					    background: none;
 
@@ -123,7 +123,7 @@ body{
 		    /*margin-left: 6em;*/
 		    position: relative;
 	    	top: 2.5rem;
-	    	left: 5em;
+	    	left: 9.3em;
 	    	padding: 0;
 	    	margin-left: -1.2em;
 
@@ -159,11 +159,21 @@ body{
 		    .primary-menu {
 			    position: relative;
 			    top: 2.6rem;
+			    line-height: 16.1px;
+
+			    .primary-menu-list {
+				    padding-left: 36px;
+				}
 
 			    li {
 				    list-style-type: none;
 				    display: inline-block;
-				    padding: 5px;
+				    padding: 5px 0;
+
+				    a{
+				        padding-right: 8px;
+				        padding-left: 5px;
+				    }
 
 				    ul.language-menu, ul.account-menu {
 					    min-width: 100px;
@@ -235,9 +245,13 @@ body{
 		    			font-weight: bold;
 		    			text-transform: uppercase;
 		    		    padding: 0 0 8px 0;
-		    			/*margin: 0 15px;*/
 		    			background: none;
 		    			margin-right: 16px;
+		    			letter-spacing: 0.03em;
+
+		    			&:last-child{
+		    				margin-right: 0;
+		    			}
 
 		    			&:hover{
 		    				background: none;
@@ -251,6 +265,7 @@ body{
 		    			.caret{
 		    				display: none;
 		    			}
+
 		    		}
 		    		ul.dropdown-menu{
 		    			margin: 0 !important;
@@ -949,6 +964,10 @@ footer{
 	}
 	.region-header .primary-block,.user-menu .navbar-right{
 		float: right !important;
+	}
+	.region-header .primary-menu li a {
+	    padding-right: 4px;
+	    padding-left: 3px;
 	}
 
 }
